--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "doctrine/doctrine-bundle": "~1.0",
         "jms/serializer-bundle": "~0.11|~1.0|~2.0",
         "phpunit/phpunit": "~4.0|^5.7",
-        "symfony/form": "~2.7|~3.0|~4.0",
-        "symfony/serializer": "~2.7|~3.1|~4.0",
-        "symfony/templating": "~2.7|~3.0|~4.0",
-        "symfony/twig-bundle": "~2.7|~3.0|~4.0",
-        "symfony/validator": "~2.7|~3.0|~4.0"
+        "symfony/form": "~2.7|~3.0|~4.0|~5.0",
+        "symfony/serializer": "~2.7|~3.1|~4.0|~5.0",
+        "symfony/templating": "~2.7|~3.0|~4.0|~5.0",
+        "symfony/twig-bundle": "~2.7|~3.0|~4.0|~5.0",
+        "symfony/validator": "~2.7|~3.0|~4.0|~5.0"
     },
     "conflict": {
         "twig/twig": "<1.12.0"
