--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "misd/phone-number-bundle",
+    "name": "st0nebridge/phone-number-bundle",
     "type": "symfony-bundle",
     "description": "Integrates libphonenumber into your Symfony2-Symfony4 application",
     "keywords": ["bundle", "phone-number", "phonenumber", "telephone number", "libphonenumber"],
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.3.9",
         "giggsey/libphonenumber-for-php": "~5.7|~6.0|~7.0|~8.0",
-        "symfony/framework-bundle": "~2.7|~3.0|~4.0"
+        "symfony/framework-bundle": "~2.7|~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "~1.0",
